--- a/FishingStorePostgress/static/css/main.css
+++ b/FishingStorePostgress/static/css/main.css
@@ -1,5 +1,13 @@
 body{
-	background-color: hsl(0, 0%, 98%);
+	background-color: hsl(0, 0%, 100%);
+}
+
+#hi-msg{
+	margin-right: 20px;
+}
+
+#logout-btn{
+	margin-right: 20px;
 }
 
 h1,h2,h3,h4,h5,h6{
@@ -15,7 +23,7 @@ h1,h2,h3,h4,h5,h6{
 
 .thumbnail{
 	width: 100%;
-	height: 200px;
+	height: 300px;
 	-webkit-box-shadow: -1px -3px 5px -2px rgba(214,214,214,1);
     -moz-box-shadow: -1px -3px 5px -2px rgba(214,214,214,1);
     box-shadow: -1px -3px 5px -2px rgba(214,214,214,1);
@@ -26,7 +34,7 @@ h1,h2,h3,h4,h5,h6{
 }
 
 .bg-dark{
-	background-color: #4f868c!important;
+	background-color: #80cdd5!important;
 }
 
 #cart-icon{
