--- a/FishingStorePostgress/store/templates/store/main.html
+++ b/FishingStorePostgress/store/templates/store/main.html
@@ -4,7 +4,6 @@
 <head>
     <title>FishingStore</title>
 
-    <!-- CSS only -->
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1" />
 
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
@@ -48,16 +47,18 @@
                 <a class="nav-link" href="{% url 'store' %}">Store <span class="sr-only">(current)</span></a>
               </li>
             </ul>
+            {% if user.is_authenticated %}
+            <span id="hi-msg">Hi, {{request.user}}!</span>
+            <span id="logout-btn"><a href="{% url 'logout' %}" class="btn btn-warning">Logout</a></span>
 
-            <div class="form-inline my-2 my-lg-0">
-                <a href="{% url 'login' %}"class="btn btn-warning">Login</a>
-                
-                <a href="{% url 'cart' %}">
-                   <img  id="cart-icon" src="{% static 'images/cart.png' %}">
-               </a>
-               <p id="cart-total">{{cartItems}}</p>
-   
-           </div>
+            <a href="{% url 'cart' %}">
+              <img  id="cart-icon" src="{% static 'images/cart.png' %}">
+            </a>
+            <p id="cart-total">{{cartItems}}</p>            
+            
+            {% else %}
+                <a href="{% url 'login' %}" class="btn btn-warning">Login</a>
+            {% endif %}
 
           </div>
       </nav>
@@ -70,7 +71,6 @@
         {% endblock content %}
     </div>
 
-    <!-- JavaScript Bundle with Popper -->
 	<script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
 
 	<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
