--- a/FishingStorePostgress/store/templates/store/store.html
+++ b/FishingStorePostgress/store/templates/store/store.html
@@ -8,8 +8,9 @@
             <div class="box_element product">
                 <h6><strong>{{product.name}}</strong></h6>
                 <hr>
+                {% if user.is_authenticated %}
                 <button data-product="{{product.id}}" data-action="add" class="btn btn-outline-secondary add-btn update-cart">Add to cart</button>
-                <a class="btn btn-outline-success" href="#">View</a>
+                {% endif %}
                 <h4 style="display: inline-block;float: right">${{product.price|floatformat:2}}</h4>
             </div>
         </div>
